# blood-donation

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
tests/: test_blood_donation.py
